--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -50,11 +50,11 @@
     "    <li style=\"margin-bottom: 10px;\">Archivos del Proyecto: archivos de código fuente.</li>\n",
     "    <li style=\"margin-bottom: 10px;\">Historial de Cambios (commits): cada que se realiza un cambio en el código, se guardan los \"commits\", los cuales describen el cambio y le asignan un identificador único. Con esto es que se puede ver el historial completo del proyecto, deshacer cambios, comparar, etc, etc.</li>\n",
     "    <li style=\"margin-bottom: 10px;\">Ramas (branches): ramas de desarrollo independientes.</li>\n",
-    "    <li style=\"margin-bottom: 10px;\">Etiquetas (tags): puntos específicos en el hisotirl que indican nuevas versiones o cambios importantes del proyecto.</li>\n",
+    "    <li style=\"margin-bottom: 10px;\">Etiquetas (tags): puntos específicos en el historial que indican nuevas versiones o cambios importantes del proyecto.</li>\n",
     "</ol>\n",
     "\n",
     "\n",
-    "En resumidas cuentas, Git es el motor de control de versiones, el repositorio es el lugar donde tengo guardados los archivos y Github es un servicio en línea que permite almacenar estos repositorios, entre otrasa cosas.\n",
+    "En resumidas cuentas, Git es el motor de control de versiones, el repositorio es el lugar donde tengo guardados los archivos y Github es un servicio en línea que permite almacenar estos repositorios, entre otras cosas.\n",
     "\n",
     "Este notebook justo, es una demostración de lo anterior."
    ]
